tests/ui/issues/issue-30438-c.stderr
error[E0515]: cannot return reference to local variable `x`
  --> $DIR/issue-30438-c.rs:9:5
   |
LL |     &x
   |     ^^ returns a reference to data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
